--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "atlasfa-production-tester-server",
+  "name": "example",
   "version": "1.0.0",
-  "description": "",
+  "description": "Example app with a redux server",
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
@@ -19,18 +19,11 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
-    "async": "^2.1.4",
     "babel-core": "^6.7.7",
-    "bluebird": "^3.3.5",
-    "immutable": "^3.7.6",
-    "node-hid": "^0.5.4",
     "ramda": "^0.24.1",
     "redux": "^3.6.0",
-    "redux-subscribe": "^1.0.2",
-    "redux-thunk": "^2.0.1",
     "redux-watch": "^1.1.1",
-    "socket.io": "1.4.5",
-    "underscore": "^1.8.3"
+    "socket.io": "1.4.5"
   },
   "babel": {
     "presets": [
