--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,7 @@
     "redux": "^3.6.0",
     "redux-saga": "^0.10.2",
     "redux-watch": "^1.1.1",
-    "socket.io": "1.4.5",
-    "underscore": "^1.8.3"
+    "socket.io": "1.4.5"    
   },
   "babel": {
     "presets": [
