--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "babel-runtime": "^6.11.6",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.4",
+    "mocha": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "url-loader": "^0.5.8",
     "webpack": "^1.13.0",
