refactored state shape, added dog reducer to show how to compose multiple monobjects, updated unit tests to reflect new state shape

--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,10 @@
     "babel-core": "^6.7.7",
     "ramda": "^0.24.1",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.10.2",
     "redux-watch": "^1.1.1",
-    "socket.io": "1.4.5"    
+    "socket.io": "1.4.5"
   },
   "babel": {
     "presets": [
